--- a/supnet/Gemfile
+++ b/supnet/Gemfile
@@ -4,17 +4,18 @@ git_source(:github) { |repo| "https://github.com/#{repo}.git" }
 ruby "3.2.1"
 
 gem 'countries', require: 'countries/global'
-gem 'devise'
+gem 'devise', "~> 4.9"
+gem 'devise-i18n'
 gem 'devise_invitable', '~> 2.0.0'
 # gem 'faraday'
 gem 'haml-rails', '~> 2.0'
 gem 'httparty'
-gem 'omniauth'
+gem 'omniauth', "~> 2.1"
 gem 'omniauth-rails_csrf_protection'
 gem 'pg', '~> 1.3.5'
-gem "puma", "~> 5.0"
+gem 'puma', "~> 5.0"
 gem 'pundit'
-gem "rails", "~> 7.0.4", ">= 7.0.4.2"
+gem 'rails', "~> 7.0.5"
 
 # The original asset pipeline for Rails [https://github.com/rails/sprockets-rails]
 gem "sprockets-rails"
